--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,19 @@
     <title>Asterope</title>
 </head>
 <body>
-
+<header>
+    <h1><img src="" alt="Our Company Logo" /></h1>
+    <nav>
+        <ul>
+            <li><a href="About Us">About us</a></li>
+            <li><a href="Our Mission Statement">Our Mission Statement</a></li>
+            <li><a href="Warranty & Safety Information">Warranty & Safety Information</a></li>
+        </ul>
+    </nav>
+</header>
+<article>
+    <p>Insert Basic Company Information Here</p>
+</article>
+<aside>Insert Additional Information Here</aside>
 </body>
 </html>
