Index and about us pages not properly linked, and i dont think the stylesheet is either. Need to add a mission statement and warranty page as well. Index page is just a super rough sketch and the about us page is an even rougher sketch. Stylesheet is just for the navbar so far. Body Element is empty for now. Make changes as needed.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <link href="Asterope Stylesheet" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>Asterope</title>
 </head>
