Renamed and slightly improved, but still same stuff as last week

--- a/About Us.html
+++ b/About Us.html
@@ -2,12 +2,23 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="Asterope Stylesheet" rel="stylesheet" />
-    <link href="Index.html" />
+    <link href="Asterope Stylesheet.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>About Us</title>
 </head>
 <body>
-    <h1>About Us</h1>
+    <header>
+        <h1>About Us</h1>
+        <nav>
+            <ul>
+                <li><a href="Homepage">Homepage</a></li>
+                <li><a href="Our Mission Statement">Our Mission Statement</a></li>
+                <li><a href="Warranty & Safety Information">Warranty & Safety Information</a></li>
+            </ul>
+        </nav>
+
+
+    </header>
+    
 </body>
 </html>
