--- a/Homepage.html
+++ b/Homepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1><img src="" alt="Our Company Logo" /></h1>
+    <h1><img style="display:block; margin-left:auto; margin-right:auto; width:30%" src="logo.png" alt="Our Company Logo" /></h1>
     <nav>
         <ul>
             <li><a href="About Us">About us</a></li>
