--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="Asterope Stylesheet.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>Asterope</title>
 </head>
