fixed some instances of Asterope to Kapier

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link href="index.css" rel="stylesheet" />
     <meta charset="utf-8" />
-    <title>Asterope</title>
+    <title>Kopier</title>
 </head>
 <body>
 <header>
