--- a/about.html
+++ b/about.html
@@ -2,12 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="Asterope Stylesheet.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>About Us</title>
 </head>
-<body>
-    <header>
+<body>    <header>
         <h1>About Us</h1>
         <nav>
             <ul>
