--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-12 width">
                      <div class="address">
-                        <h3>Useful Linkes</h3>
+                        <h3>Useful Links</h3>
                         <i><img src="icon/1.png">Locations</i>
                      </div>
                   </div>
@@ -279,7 +279,7 @@
                </div>
             </div>
             <div class="copyright">
-               <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a></p>
+               
             </div>
          </div>
       </footr>
