--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                            <img class="first-slide" src="images/testimonial-img.png">
                            <div class="container">
                               <div class="carousel-caption relat">
-                                 <h3>Luka due</h3>
+                                 <h3>Matthew Kovach</h3>
                                  <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem  </p>
+                                 <p>How neat! I don't have to buy Printer Ink ever again!</p>
                               </div>
                            </div>
                         </div>
