--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
    <head>
       <!-- basic -->
@@ -96,10 +96,7 @@
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Basic template</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                           looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                           of letters, as opposed to using 'Content here, content here', making it look like readable English.
-                           Many desktop publishing packages and </p>
+                        <p>What sets us apart from other "laser printers"? First of all, they use lasers AND ink, wasting your time and money on something you shouldn't have to buy. Our focus is to eliminate ink all together. It's too expensive for what it is and half the time printers arent used for their colors so what's the point in buying a $50 blue ink cartridge thats never going to get used?</p>
                         <a  href="#testimonial">Read More</a>
                      </div>
                   </div>
@@ -146,8 +143,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Download  And  Use  For  Free  </h2>
-                     <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of <br>using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</span>
+                     <h2>How it works</h2>
+                     <span>Kopiers Inkless printers aren't those silly "laser printers" that still use ink. Our Printers are 100% inkless and use 100% lasers (Safety tested) as well so you never have  to go to an office store just for ink</span>
                   </div>
                </div>
             </div>
@@ -161,9 +158,7 @@
                      </div>
                      <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev"> <i class='fa fa-angle-left'></i></a> <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next"> <i class='fa fa-angle-right'></i></a> 
                   </div>
-                  <div class="read-more">
-                     <a href="#">download now</a>
-                  </div>
+                  
                </div>
             </div>
          </div>
@@ -199,7 +194,7 @@
                               <div class="carousel-caption relat">
                                  <h3>Luka due</h3>
                                  <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem  </p>
+                                 <p>"These printers are legit 100% inkless. They aren't like those other posers who use lasers that also use ink and I've saved a ton of miney not buying ink.</p>  
                               </div>
                            </div>
                         </div>
