--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <img class="third-slide" src="images/banner2.png" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Basic template</h1>
+                        <h1>Why we're different</h1>
                         <p>What sets us apart from other "laser printers"? First of all, they use lasers AND ink, wasting your time and money on something you shouldn't have to buy. Our focus is to eliminate ink all together. It's too expensive for what it is and half the time printers arent used for their colors so what's the point in buying a $50 blue ink cartridge thats never going to get used?</p>
                         <a  href="#testimonial">Read More</a>
                      </div>
