last minute edits
in progress

--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
             </div>
             <div class="row">
                <div class="infomercial">
-                  
+                  <audio controls>
+                     <source src="CapstoneRadioCommercial.wav" type="audio/wav">
+                     Your browser does not support the audio element.
+                   </audio> 
                </div>
             </div>
          </div>
