last minute changes
finished

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                </div>
             </div>
             <div class="row">
-               <div class="infomercial">
+               <div class="center">
                   <audio controls>
                      <source src="CapstoneRadioCommercial.wav" type="audio/wav">
                      Your browser does not support the audio element.
