--- a/index.html
+++ b/index.html
@@ -233,15 +233,10 @@
                   <div class="col-lg-2 col-md-6 col-sm-12 width">
                      <div class="address">
                         <h3>Address</h3>
-                        <i><img src="icon/3.png">Locations</i>
+                        <i><img src="icon/3.png">1101 W Liberty St, Medina, OH 44256</i>
                      </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Menus</h3>
-                        <i><img src="icon/2.png">Locations</i>
-                     </div>
-                  </div>
+
                   <div class="col-lg-2 col-md-6 col-sm-12 width">
                      <div class="address">
                         <h3>Useful Links</h3>
