--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                      <span>Tired of buying replacement ink cartridges? <br />Well do we have just the product for you.
                         Introducing the world's very first Inkless Printer. <br/>Using lasers to singe the paper at a
                         safe wattage, it burns the paper to mimic black ink being sprayed onto the printer. This reduces
-                        the ink needed to print paper to 0%. That's right. 0%, this printer uses absolutely no ink.<br/> Saving
+                        the ink needed to print paper to 0%. That's right. 0%. This printer uses absolutely no ink.<br/> Saving
                         you a trip to the office supplies store for expensive ink cartridges.</span>
                   </div>
                </div>
@@ -189,7 +189,7 @@
                               <div class="carousel-caption relat">
                                  <h3>Luka due</h3>
                                  <span><i class="fa fa-quote-left"></i> ( foundery )<i class="fa fa-quote-right"></i></span>
-                                 <p>"These printers are legit 100% inkless. They aren't like those other posers who use lasers that also use ink and I've saved a ton of miney not buying ink.</p>  
+                                 <p>"These printers are legit 100% inkless. They aren't like those other posers who use lasers that also use ink and I've saved a ton of money not buying ink.</p>  
                               </div>
                            </div>
                         </div>
